--- a/UserAccessSystem/Views/Shared/_Layout.cshtml
+++ b/UserAccessSystem/Views/Shared/_Layout.cshtml
@@ -8,8 +8,10 @@
     @Scripts.Render("~/bundles/modernizr")
 
     <script src="~/Scripts/jquery-1.10.2.js"></script>
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/jquery-ui.js"></script>
     <script src="~/Scripts/jquery.bootgrid.js"></script>
+
+    <link rel="stylesheet" href="../../Content/jquery-ui.css"/>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -37,8 +39,7 @@
             <p>&copy; @DateTime.Now.Year - Mariusz Piątkowski</p>
         </footer>
     </div>
-
-    @Scripts.Render("~/bundles/jquery")
+    
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
