--- a/UserAccessSystem/Views/Home/AddUserPopup.cshtml
+++ b/UserAccessSystem/Views/Home/AddUserPopup.cshtml
@@ -1,6 +1,4 @@
-﻿@model List<SelectListItem>
-
-@{
+﻿@{
     ViewBag.Title = "Add user";
 }
 
@@ -10,9 +8,6 @@
 
     @Html.Label("lbAddUser_LastName", "Last name")
     @Html.TextBox("tbAddUser_LastName", "", new { @class = "form-control" })
-
-    @*@Html.Label("lbAddUser_IsAdministrator", "Administrator")
-    @Html.DropDownList("ddAddUser_IsAdministrator", Model, new { @class = "form-control" })*@
 
     @Html.Label("lbAddUser_DateOfBirth", "Date of birth")
     @Html.Editor("dpAddUser_DateOfBirth")
@@ -25,30 +20,32 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
+        $("#dpAddUser_DateOfBirth").datepicker({
+            dateFormat: 'dd/mm/yy'
+        }).datepicker("setDate", new Date);
+
         $("#dpAddUser_LastSubscription").datepicker({
             dateFormat: 'dd/mm/yy'
         }).datepicker("setDate", new Date);
     });
-
+    
     $("#btnAddUser_Add").click(function () {
         var input = {
             FirstName: $("#tbAddUser_Name").val(),
             LastName: $("#tbAddUser_LastName").val(),
-            //IsSuperUser: $("#ddAddUser_IsAdministrator").val(),
             DateOfBirth: $("#dpAddUser_DateOfBirth").val(),
             LastSubscription: $("#dpAddUser_LastSubscription").val()
         }
-
-        console.log(input);
-
+        
         $.ajax({
             url: '@Url.Action("SaveUser", "User")',
             type: 'POST',
             dataType: 'json',
             conventType: "application/json; charset=utf-8",
             data: { p: JSON.stringify(input) },
-            success: function (result) {
-                console.log(result);
+            complete: function () {
+                $("#popupAddUser").dialog("close");
+                $("#grid-basic").bootgrid("reload");
             }
         });
     });
