--- a/UserAccessSystem/Content/Site.css
+++ b/UserAccessSystem/Content/Site.css
@@ -3,15 +3,24 @@
     padding-bottom: 20px;
 }
 
-/* Set padding to keep content from hitting the edges */
+
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.addUserFields > label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.addUserFields > input {
+    margin-bottom: 10px;
+    width: 100%;
 }
