--- a/UserAccessSystem/Views/Shared/_Layout.cshtml
+++ b/UserAccessSystem/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "", "", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("API", "ApiTests", "Home", new { area = "" }, null)</li>
                 </ul>
             </div>
         </div>
