create textarea with api response after clicking a link on Web API tests page

--- a/UserAccessSystem/Views/Home/ApiTests.cshtml
+++ b/UserAccessSystem/Views/Home/ApiTests.cshtml
@@ -7,12 +7,33 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-6"">
-            <a href="#">Get all users</a>
+        <div class="col-md-3">
+            <a id="aApiTests_GetAllUsers" href="#">Get all users</a>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-9">
             @Html.Label("lbApiTests_ApiResponse", "Web API response")
-            @Html.TextArea("taApiTests_ApiResponse", new {@class = "form-control", style="width: 50%; height: 80%" })
+            @*@Html.TextArea("taApiTests_ApiResponse", new {@class = "form-control", style = "", @readonly = true, wrap = "off"})*@
+            <div id="ApiTests_ApiResponse"></div>
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+    $("#aApiTests_GetAllUsers").click(function () {
+        $.ajax({
+            url: 'http://localhost:55529/api/users',
+            type: 'GET',
+            dataType: 'json',
+            success: function (data) {
+                var result = JSON.stringify(data);
+                var testDiv = $("#ApiTests_ApiResponse");
+                var textArea = "<textarea> " + result + "</textarea>";
+                testDiv.append(textArea);
+            },
+            error: function(error) {
+                alert("Failed to perform API request");
+                console.log(error);
+            }
+        });
+    });
+</script>
