--- a/UserAccessSystem/Content/Site.css
+++ b/UserAccessSystem/Content/Site.css
@@ -12,15 +12,31 @@
 input,
 select,
 textarea {
-    max-width: 280px;
+    /*max-width: 280px;*/
 }
 
-.addUserFields > label {
+.addUserFields label {
     display: block;
     margin-bottom: 5px;
+    width: 100%;
 }
 
-.addUserFields > input {
+.addUserFields input {
     margin-bottom: 10px;
     width: 100%;
+}
+
+.webApiTestOptions {
+    margin-top: 50px;
+}
+
+.webApiTestOptions > div {
+    margin-bottom: 20px;
+}
+
+#webApiTextAreaTestResult {
+    width: 100%;
+    height: 200px;
+    display: inline-block;
+    min-height: 10px;
 }
