--- a/UserAccessSystem/Views/Shared/_Layout.cshtml
+++ b/UserAccessSystem/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <script src="~/Scripts/jquery-1.10.2.js"></script>
     <script src="~/Scripts/jquery-ui.js"></script>
     <script src="~/Scripts/jquery.bootgrid.js"></script>
+    <script src="~/Scripts/CustomScripts/ControlsHelper.js"></script>
 
     <link rel="stylesheet" href="../../Content/jquery-ui.css"/>
 </head>
