--- a/UserAccessSystem/Views/Home/Index.cshtml
+++ b/UserAccessSystem/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <table id="grid-basic" class="table table-condensed table-hover table-striped">
     <thead>
         <tr>
-            <th data-column-id="Id" data-identifier="true">Id</th>
+            <th data-column-id="Id" data-type="numeric" data-identifier="true">Id</th>
             <th data-column-id="FirstName">First name</th>
             <th data-column-id="LastName">Last name</th>
             <th data-column-id="LastSubscription">Last subscription</th>
@@ -18,12 +18,14 @@
     </thead>
 </table>
 
-<div style="display: flex">
+<div id="userGridActions" style="display: flex">
     <button id="btnAddUser" type="button" class="btn btn-primary" style="float: right">Add user</button>
+    <button id="btnEditUser" type="button" class="btn btn-default" style="float: right">Edit user</button>
 </div>
 
 <div id="popupAddUser"></div>
 
+@* ReSharper disable PossiblyUnassignedProperty *@
 <script type="text/javascript">
     $("#grid-basic").bootgrid({
         ajax: true,
@@ -33,14 +35,24 @@
             };
         },
         url: "Home/GetAllUsers",
+        selection: true,
+        multiSelect: true,
+        rowSelect: false,
+        keepSelection: true,
         templates: {
             search: ""
-        }
+        },
+        navigation: 0
+    }).on("selected.rs.jquery.bootgrid", function (e, rows) {
+        //var rowIds = [];
+        //for (var i = 0; i < rows.length; i++) {
+        //    rowIds.push(rows[i].Id);
+        //}
     });
 
     var config = {
         autoOpen: false,
-        position: { my: "top+150px", at: "top", of:window},
+        position: { my: "top+150px", at: "top", of: window },
         resizable: false,
         title: 'Add User',
         modal: true,
@@ -53,5 +65,23 @@
 
     $("#btnAddUser").on("click", function () {
         $("#popupAddUser").dialog(config).dialog("open");
+    });
+
+    $("#btnEditUser").on("click", function () {
+        var selectedRows = $("#grid-basic").bootgrid("getSelectedRows");
+
+        if (selectedRows.length > 1) {
+            alert("Only one user can be selected to perform EDIT action!");
+        } else if (selectedRows.length === 0) {
+            alert("You need to select a user to perform EDIT action!");
+        } else {
+            $.ajax({
+                url: '@Url.Action("EditUser", "User")',
+                type: "POST",
+                dataType: 'json',
+                conventType: "application/json; charset=utf-8",
+                data: { p: selectedRows }
+            });
+        }
     });
 </script>
