--- a/UserAccessSystem/Views/Home/Index.cshtml
+++ b/UserAccessSystem/Views/Home/Index.cshtml
@@ -20,7 +20,8 @@
 
 <div id="userGridActions" style="display: flex">
     <button id="btnAddUser" type="button" class="btn btn-primary" style="float: right">Add user</button>
-    <button id="btnEditUser" type="button" class="btn btn-default" style="float: right">Edit user</button>
+    <button id="btnEditUser" type="button" class="btn btn-default" style="float: right">Update user</button>
+    <button id="btnRemoveUser" type="button" class="btn btn-danger" style="float: right">Remove users</button>
 </div>
 
 <div id="popupAddUser"></div>
@@ -71,7 +72,6 @@
     });
 
     //#### EDIT USER ####//
-   
 
     $("#btnEditUser").on("click", function() {
         var selectedRows = $("#grid-basic").bootgrid("getSelectedRows");
@@ -80,10 +80,10 @@
             autoOpen: false,
             position: { my: "top+150px", at: "top", of: window },
             resizable: false,
-            title: 'Edit User',
+            title: 'Update User',
             modal: true,
             open: function() {
-                $(this).load('@Url.Action("EditUser", "User")' + "/p=" + selectedRows);
+                $(this).load('@Url.Action("EditUser", "User")' + "/?p=" + selectedRows);
             }
         }
 
@@ -94,15 +94,26 @@
         } else if (selectedRows.length === 0) {
             alert("You need to select a user to perform EDIT action!");
         } else {
-            //$("#popupAddUser").dialog(configEdit).dialog("open");
-            $.ajax({
-                url: '@Url.Action("EditUser", "User")',
-                type: "POST",
-                dataType: 'html',
-                conventType: "application/json; charset=utf-8",
-                data: { p: selectedRows },
-                //success:  $("#popupEditUser").dialog("open")
-            });
+            $("#popupAddUser").dialog(configEdit).dialog("open");
         }
+    });
+
+    //#### REMOVE USER ####//
+    $("#btnRemoveUser").on("click", function () {
+        var selectedRows = $("#grid-basic").bootgrid("getSelectedRows");
+
+        $.ajax({
+            url: '@Url.Action("DeleteUser", "User")',
+            type: 'POST',
+            dataType: 'text',
+            conventType: "application/json; charset=utf-8",
+            data: { p: JSON.stringify(selectedRows) },
+            complete: function () {
+                $("#grid-basic").bootgrid("reload");
+            },
+            error: function (error) {
+                alert("Failed to remove user!");
+            }
+        });
     });
 </script>
