--- a/UserAccessSystem/Views/Shared/_Layout.cshtml
+++ b/UserAccessSystem/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <script src="~/Scripts/jquery-ui.js"></script>
     <script src="~/Scripts/jquery.bootgrid.js"></script>
     <script src="~/Scripts/CustomScripts/ControlsHelper.js"></script>
+    <script src="~/Scripts/TypeScript/MainPage.js"></script>
 
     <link rel="stylesheet" href="../../Content/jquery-ui.css"/>
 </head>
