--- a/UserAccessSystem/Views/Shared/_Layout.cshtml
+++ b/UserAccessSystem/Views/Shared/_Layout.cshtml
@@ -11,7 +11,11 @@
     <script src="~/Scripts/jquery-ui.js"></script>
     <script src="~/Scripts/jquery.bootgrid.js"></script>
     <script src="~/Scripts/CustomScripts/ControlsHelper.js"></script>
+
+    @* TYPESCRIPT *@
     <script src="~/Scripts/TypeScript/MainPage.js"></script>
+    <script src="~/Scripts/TypeScript/EditUser.js"></script>
+    <script src="~/Scripts/TypeScript/AddUser.js"></script>
 
     <link rel="stylesheet" href="../../Content/jquery-ui.css"/>
 </head>
