territory model/database table/service/migrations + code cleanup/refactoring

--- a/UserAccessSystem/Views/User/EditUser.cshtml
+++ b/UserAccessSystem/Views/User/EditUser.cshtml
@@ -38,6 +38,7 @@
             Model_LastSubscriptioon: '@Model.LastSubscription'
         }
 
-        new EditUser(config);
+        var edit = new EditUser(config);
+        edit.configEditUserPopup();
     });
 </script>
