--- a/UserAccessSystem/Views/Shared/_Layout.cshtml
+++ b/UserAccessSystem/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
     <script src="~/Scripts/TypeScript/MainPage.js"></script>
     <script src="~/Scripts/TypeScript/EditUser.js"></script>
     <script src="~/Scripts/TypeScript/AddUser.js"></script>
+    <script src="~/Scripts/TypeScript/Territory.js"></script>
 
     <link rel="stylesheet" href="../../Content/jquery-ui.css"/>
 </head>
@@ -32,6 +33,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Territories", "Index", "Territory", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("API", "ApiTests", "Home", new { area = "" }, null)</li>
                 </ul>
             </div>
