--- a/UserAccessSystem/Views/Shared/_Layout.cshtml
+++ b/UserAccessSystem/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     <script src="~/Scripts/TypeScript/EditUser.js"></script>
     <script src="~/Scripts/TypeScript/AddUser.js"></script>
     <script src="~/Scripts/TypeScript/Territory.js"></script>
+    <script src="~/Scripts/TypeScript/AddTerritory.js"></script>
 
     <link rel="stylesheet" href="../../Content/jquery-ui.css"/>
 </head>
