--- a/UserAccessSystem/Views/Shared/_Layout.cshtml
+++ b/UserAccessSystem/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
     <script src="~/Scripts/TypeScript/Territory.js"></script>
     <script src="~/Scripts/TypeScript/AddTerritory.js"></script>
     <script src="~/Scripts/TypeScript/AssignUsersToTerritories.js"></script>
+    <script src="~/Scripts/TypeScript/ApiTests.js"></script>
 
     <link rel="stylesheet" href="../../Content/jquery-ui.css"/>
 </head>
