refactor for previous commit (add territory to api tests)

--- a/UserAccessSystem/Views/Shared/_Layout.cshtml
+++ b/UserAccessSystem/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <script src="~/Scripts/jquery-ui.js"></script>
     <script src="~/Scripts/jquery.bootgrid.js"></script>
     <script src="~/Scripts/CustomScripts/ControlsHelper.js"></script>
+    <script src="~/Scripts/CustomScripts/DataFactory.js"></script>
 
     @* TYPESCRIPT *@
     <script src="~/Scripts/TypeScript/MainPage.js"></script>
